// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game resolver should add user to game (with password) 1`] = `
Array [
  [GraphQLError: Wrong password],
]
`;

exports[`Game resolver should add user to game (with password) 2`] = `
Object {
  "JoinGame": Object {
    "master": Object {
      "name": "test2-user",
    },
    "name": "Test Game",
    "users": Array [
      Object {
        "name": "test2-user",
      },
      Object {
        "name": "test-user",
      },
    ],
  },
}
`;

exports[`Game resolver should add user to game (without password) 1`] = `
Array [
  [GraphQLError: Game not found],
]
`;

exports[`Game resolver should add user to game (without password) 2`] = `
Object {
  "JoinGame": Object {
    "master": Object {
      "name": "test2-user",
    },
    "name": "Test Game",
    "users": Array [
      Object {
        "name": "test2-user",
      },
      Object {
        "name": "test-user",
      },
    ],
  },
}
`;

exports[`Game resolver should create a new game 1`] = `
Object {
  "master": Object {
    "name": "test-user",
  },
  "name": "Test Game",
  "users": Array [
    Object {
      "name": "test-user",
    },
  ],
}
`;

exports[`Game resolver should get a specific game from id 1`] = `
Object {
  "master": Object {
    "name": "test-user",
  },
  "name": "Test Game",
  "users": Array [
    Object {
      "name": "test-user",
    },
  ],
}
`;

exports[`Game resolver should get joining game information 1`] = `
Object {
  "hasJoined": false,
  "hasPassword": true,
}
`;

exports[`Game resolver should get joining game information 2`] = `
Object {
  "hasJoined": true,
  "hasPassword": true,
}
`;

exports[`Game resolver should get joining game information 3`] = `
Object {
  "hasJoined": true,
  "hasPassword": false,
}
`;

exports[`Game resolver should prevent creating a game when user is not in context 1`] = `
Array [
  [GraphQLError: Access denied! You need to be authorized to perform this action!],
]
`;
